tests/fails/f34.t
aa = 4
aa = nil
terra foo()
  return aa
end
foo()
